# AgentVitals

./: .gitignore  README.md  pyproject.toml
agent_vitals/: __init__.py  cli.py  hook_store.py  pricing.py  tokenizer.py  tracker.py
examples/: codex_vitals_bridge.sh
tests/: test_cli.py  test_hook_store.py  test_tracker.py
